$Id$

v0.39.5		24-Dec-2003


	mbcico:
		Binkp code cleanup.

	script:
		Fixed NetBSD init script

v0.39.4		08-Dec-2003 - 24-Dec-2003

	general:
		Added French language file created by Francois Thunus. This
		translation is not yet complete.
		Cleanup in main makefile, added help.
		Revised configure and all Makefiles for better support of
		linking with threads libraries.
		Changed endian tests using the configure script.
		Changed compiler flags for threads.

	upgrade:
		If you didn't change anything of the language defaults then
		delete /opt/mbse/etc/language.data and run mbsetup to create
		a new language.data including the french setup.

	libmsgbase:
		Changed the fix in JAM to prevent the copy overwrite. This may
		also fixed the message renumbering bug introduced with previous
		version.

	mbsebbs:
		A lot of small fixes for problems found with valgrind.

	mbsetup:
		Added default record for french language.

	mbtask:
		Moved the scheduler in a thread.
		Rewrote shutdown procedure to make it more portable.

	script:
		Dropped support for Slackware pre 7.0.
		Changed startup scripts for NetBSD.


v0.39.3		26-Nov-2003 - 08-Dec-2003.

	general:
		Since this version Posix threads are being used, please let
		me know if this doesn't compile on you system.
		All Makefiles do not strip the binaries anymore, the binaries
		are stripped during make install only. This allows to run the
		not yet installed binaries under debuggers.
		The configure script has a --enable-debugging option so that
		all code can be compiled to let it run under debuggers. Not
		usefull for production systems.
		This version had a lot of testing using valgrind. Most errors
		were minor problems.

	libclcomm:
		Fixed a small (not harmfull) buffer overlapped copy detected
		by valgrind.

	libcommon:
		Code cleanup in proglock, pktname and crc.
		Fixed a forgotten fclose in proglock.

	libmsgbase:
		In JAM_Open replaced a strcpy with memmove.
		Fixed invalid memory read/write in Msg_Link.
